# dashergame

./: .gitignore  CMakeLists.txt  planning.txt
include/: Obstacle.h  Player.h  Texture.h  WindowManager.h
src/app/: CMakeLists.txt  main.cpp
